# tcalosr_final

./: README.md  TCA_EDA.ipynb  pyproject.toml  requirements.txt
conf/: logging.yml
conf/base/: catalog.yml  parameters_data_processing.yml  parameters_holidays_regressors.yml  parameters_modelo.yml  parameters_results.yml  parameters_stats.yml
docs/source/: conf.py  index.rst
src/tcalosr/: __init__.py  __main__.py  settings.py
src/tcalosr/pipelines/data_processing/: nodes.py  pipeline.py
src/tcalosr/pipelines/holidays_regressors/: __init__.py  nodes.py  pipeline.py
src/tcalosr/pipelines/modelo/: __init__.py  nodes.py  pipeline.py
src/tcalosr/pipelines/stats/: __init__.py  nodes.py  pipeline.py
streamlit/: Dockerfile  app.py  docker-compose.yml
tests/pipelines/holidays_regressors/: test_pipeline.py
tests/pipelines/modelo/: test_pipeline.py
tests/pipelines/results/: test_pipeline.py
tests/pipelines/stats/: test_pipeline.py
